--- a/style.css
+++ b/style.css
@@ -4,10 +4,13 @@ Style for Blog Post
 March 6th, 2025
 */
 
+body {
+    background-color: #f6f6f7;
+}
+
 .heading {
     margin: auto;
     padding: 20px;
-    width: 50%;
     text-align: center;
     background-color: #f0f2f8;
     border-radius: 25px;
@@ -18,10 +21,11 @@ March 6th, 2025
 
 .main-text {
     margin: auto;
-    padding: 10px;
+    padding: 30px;
     width: 50%;
     font-family: Verdana;
     line-height: 2;
+    background-color: white;
 }
 
 code {
@@ -56,6 +60,13 @@ var {
     font-style: italic;
 }
 
+.math-smaller {
+    text-align: center;
+    font-family: Georgia;
+    font-size: 16pt;
+    font-style: italic;
+}
+
 canvas {
     margin: auto;
     padding: 20px;
@@ -77,5 +88,21 @@ canvas {
     padding: 6px 10px;
     border-radius: 4px;
     text-shadow: none;
-    /* border: 4px solid #acaeb6; */
+}
+
+td {
+    border: 1px solid black;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+}
+
+.row {
+    display: flex;
+}
+  
+  .column {
+    flex: 33%;
+    padding: 5px;
+    text-align: center;
 }
