--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 .main-text {
     margin: auto;
-    padding: 30px;
+    padding: 15px 70px;
     width: 50%;
     font-family: Verdana;
     line-height: 2;
@@ -88,6 +88,7 @@ canvas {
     padding: 6px 10px;
     border-radius: 4px;
     text-shadow: none;
+    white-space: nowrap;
 }
 
 td {
@@ -105,4 +106,16 @@ td {
     flex: 33%;
     padding: 5px;
     text-align: center;
+}
+
+.side-note {
+    text-align: center;
+    background-color: #ffe9ed;
+    margin:auto;
+    margin-top: 50px;
+    margin-bottom: 50px;;
+    width: 80%;
+    padding: 20px;
+    border-radius: 15px;
+    overflow-x: auto;
 }
