--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 .heading {
     margin: auto;
-    padding: 20px;
+    padding: 10px 40px 20px 40px;
     text-align: center;
     background-color: #f0f2f8;
     border-radius: 25px;
@@ -20,8 +20,11 @@ body {
 }
 
 .main-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: auto;
-    padding: 15px 70px;
+    padding: 15px 50px;
     width: 50%;
     font-family: Verdana;
     line-height: 2;
@@ -118,4 +121,42 @@ td {
     padding: 20px;
     border-radius: 15px;
     overflow-x: auto;
+}
+
+.toc {
+    float: left;
+    width: 19%;
+    position: fixed;
+    font-family: Verdana;
+    font-size: 12pt;
+    line-height: 2;
+    background-color: white;
+}
+
+.celebration-button {
+    background-color: #ff5e78;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    margin-top: 50px;
+}
+
+.celebration-button:hover {
+    background-color: #e04862;
+    transform: scale(1.05);
+}
+
+.graph-container {
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
