--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ td {
     display: flex;
 }
   
-  .column {
+.column {
     flex: 33%;
     padding: 5px;
     text-align: center;
@@ -162,4 +162,20 @@ td {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.ul-toc {
+    list-style-type: none;
+}
+
+.li-toc:hover {
+    background-color: #ffe9ed;
+    padding: 7px;
+    border-radius: 4px;
+    border: 2px solid #f4c1cb;
 }
